--- a/index.html
+++ b/index.html
@@ -314,25 +314,30 @@
               </div>
               <div class="col-8">
                 <div class="center timeline-title">Two Terabyte Studios</div>
-                <div class="timeline-text">Two Terabyte Studios was formed in late Summer 2016 after working on the
+                <div class="timeline-text">
+
+                  <br>
+                  Two Terabyte Studios was formed in late Summer 2016 after working on the
                   development of AtomBlast the prior year
                   with the intent to create the first game development club at Monta
                   Vista High School. We created
                   four games as a club, one of which has been officially published.
-
-                  2TBS operated towards the goal of educating the community in game development through real production
+                  <br><br>
+                  2TBS operated towards the goal of educating the community in game development through real
+                  production
                   by producing our
-                  own games from start to finish. Over our two years of operation, we have had over 30 current and past
+                  own games from start to finish. Over our two years of operation, we have had over 30 current and
+                  past
                   members, over 10
                   of whom create our core game development team with in-house artists, programmers, animators,
                   designers, writers, and
                   managers. While our preferred development engine is Unity,
-                  we are always open to experimentation, and have tested development through other popular engines such
-                  as Unreal Engine,
+                  we are always open to experimentation, and have tested development through other popular engines
+                  such as Unreal Engine,
                   Lumberyard, Godot, and GameMaker Studio.
-
-                  As the code lead, I directed the 2TBS code team and worked closely with the lead organizers to oversee
-                  weekly meetings, design implementations, and timelines.
+                  <br><br>
+                  As the code lead, I directed the 2TBS code team and worked closely with the lead organizers to
+                  oversee weekly meetings, design implementations, and timelines.
                 </div>
               </div>
             </div>
@@ -348,19 +353,32 @@
               </div>
               <div class="col-8">
                 <div class="center timeline-title">Bananium Labs</div>
-                <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a sapien metus.
-                  Donec ultricies, magna vitae pharetra
-                  congue, dui tellus bibendum dui, eget porta lectus lacus sit amet velit. Duis vulputate aliquet
-                  turpis, et malesuada mi
-                  mollis vitae. Duis nisi ligula, egestas sed faucibus sed, tempus eget neque. Suspendisse potenti. Sed
-                  imperdiet velit id
-                  lorem facilisis, quis aliquam ante lacinia. Phasellus tincidunt vehicula vulputate. Proin vitae nulla
-                  a nulla interdum
-                  rutrum. Vestibulum ut aliquet odio, ut dignissim mi. Suspendisse fermentum blandit nisl, ac facilisis
-                  metus aliquam a.
-                  Pellentesque sollicitudin ex massa, eget volutpat leo rutrum eu. Etiam eget pulvinar metus.
-                  Pellentesque vitae nulla
-                  tortor. Vivamus turpis ipsum, tempus at nibh vitae, mollis ultricies lectus.</div>
+                <div class="timeline-text">
+
+                  <br>
+                  Bananium Labs was formed in November 2017 after numerous students consolidated and decided to work
+                  cooperatively. We
+                  decided to create an organization in which we could organize our various software projects, Git
+                  repositories, and
+                  hackathon submissions into one place. Never again would we have to have the hour-long debate
+                  surrounding whose account
+                  to associate our code to. What started as a small group of three developers grew quickly, as we began
+                  to look for more
+                  members to attend hackathons and contribute to our projects. So far, we have attended 8 hackathons
+                  (our projects are
+                  showcased below). We're also interested in game development- our game projects are organized within
+                  Two Terabyte
+                  Studios.
+                  <br><br>
+                  Bananium Labs is a 501c3 tax-exempt organization, obtained after a focus shift to better fit our
+                  present purpose of
+                  developing new and exciting projects and inspiring others to create their own projects. We offer a
+                  multitude of services
+                  and support to turn dreams into reality through promoting entrepeneurship and product ideation.
+                  <br><br>
+                  I am the cofounder and Director of Operations at Bananium Labs, playing a major role in nonprofit
+                  management and directing several projects, most notably LaunchHacks.
+                </div>
               </div>
             </div>
           </div>
@@ -375,22 +393,18 @@
               </div>
               <div class="col-8">
                 <div class="center timeline-title">LaunchHacks</div>
-                <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a sapien metus.
-                  Donec ultricies, magna vitae pharetra
-                  congue, dui tellus bibendum dui, eget porta lectus lacus sit amet velit. Duis vulputate aliquet
-                  turpis, et malesuada mi
-                  mollis vitae. Duis nisi ligula, egestas sed faucibus sed, tempus eget neque. Suspendisse potenti.
-                  Sed
-                  imperdiet velit id
-                  lorem facilisis, quis aliquam ante lacinia. Phasellus tincidunt vehicula vulputate. Proin vitae
-                  nulla
-                  a nulla interdum
-                  rutrum. Vestibulum ut aliquet odio, ut dignissim mi. Suspendisse fermentum blandit nisl, ac
-                  facilisis
-                  metus aliquam a.
-                  Pellentesque sollicitudin ex massa, eget volutpat leo rutrum eu. Etiam eget pulvinar metus.
-                  Pellentesque vitae nulla
-                  tortor. Vivamus turpis ipsum, tempus at nibh vitae, mollis ultricies lectus.</div>
+                <div class="timeline-text"><br>Launch Hacks is an annual high school hackathon. In addition to helping
+                  students improve
+                  their design and development skills, LaunchHacks aims to provide support to help students improve
+                  business and presentation skills-
+                  not just to pitch a successful project, but also to inspire the next generation of inventors,
+                  entrepreneurs, and
+                  leaders.
+                  <br><br>
+                  I was the lead director of the first edition of LaunchHacks, which took place in April 2019. Some of
+                  my contributions included logo design, managing relations with corporate donors, organizing catering,
+                  website design, and overseeing a team of 9 organizers.
+                </div>
               </div>
             </div>
           </div>
@@ -405,23 +419,13 @@
               </div>
               <div class="col-8">
                 <div class="center timeline-title">Trisagion Games</div>
-                <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a sapien
-                  metus.
-                  Donec ultricies, magna vitae pharetra
-                  congue, dui tellus bibendum dui, eget porta lectus lacus sit amet velit. Duis vulputate aliquet
-                  turpis, et malesuada mi
-                  mollis vitae. Duis nisi ligula, egestas sed faucibus sed, tempus eget neque. Suspendisse potenti.
-                  Sed
-                  imperdiet velit id
-                  lorem facilisis, quis aliquam ante lacinia. Phasellus tincidunt vehicula vulputate. Proin vitae
-                  nulla
-                  a nulla interdum
-                  rutrum. Vestibulum ut aliquet odio, ut dignissim mi. Suspendisse fermentum blandit nisl, ac
-                  facilisis
-                  metus aliquam a.
-                  Pellentesque sollicitudin ex massa, eget volutpat leo rutrum eu. Etiam eget pulvinar metus.
-                  Pellentesque vitae nulla
-                  tortor. Vivamus turpis ipsum, tempus at nibh vitae, mollis ultricies lectus.</div>
+                <div class="timeline-text">
+                  <br>
+                  Trisagion Games is a newly-formed indie game development studio with fellow developers Omar Hossain,
+                  Kevin Chu, and Nicholas Chen. This summer, we created three games from start to finish and
+                  participated in two game jams. In the future, we aim to release full games, both as a hobby and as a
+                  profession.
+                </div>
               </div>
             </div>
           </div>
