--- a/index.html
+++ b/index.html
@@ -456,19 +456,19 @@
 
         <div id="art-lightgallery">
           <div class="row art-row">
-            <div class="col-4 art-image-container center" data-src="img/art/arch-1.png" data-sub-html="Caption">
+            <div class="col-4 art-image-container center" data-src="img/art/arch-1.png" data-sub-html="My customized Linux desktop, designed from scratch starting from a blank terminal. View my dotfiles: https://github.com/64bitpandas/dotfiles/tree/manjaro-summer">
               <img src="img/art/arch-1.png" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
               </div>
             </div>
-            <div class="col-4 art-image-container center" data-src="img/art/11.png" data-sub-html="Caption">
+            <div class="col-4 art-image-container center" data-src="img/art/11.png" data-sub-html="Mahatma Gandhi, father of India, destroyer of worlds. My first portrait drawing in a two-part study.">
               <img src="img/art/11.png" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
               </div>
             </div>
-            <div class="col-4 art-image-container center" data-src="img/art/16.jpg" data-sub-html="Caption">
+            <div class="col-4 art-image-container center" data-src="img/art/16.jpg" data-sub-html="'Sunset on Europa,' my submission to the MrSuicideSheep Art Challenge 2019.">
               <img src="img/art/16.jpg" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
@@ -476,20 +476,20 @@
             </div>
           </div>
           <div class="row art-row">
-            <div class="col-4 art-image-container center" data-src="img/art/stickers.jpg" data-sub-html="Caption">
+            <div class="col-4 art-image-container center" data-src="img/art/stickers.jpg" data-sub-html="These LaunchHacks stickers showcase my custom-designed logo for the hackathon.">
               <img src="img/art/stickers.jpg" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
               </div>
             </div>
-            <div class="col-4 art-image-container center" data-src="img/art/06.png" data-sub-html="Caption">
+            <div class="col-4 art-image-container center" data-src="img/art/06.png" data-sub-html="Custom wallpaper and color scheme drawn for my Linux desktop.">
               <img src="img/art/06.png" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
               </div>
             </div>
             <div class="col-4 art-image-container center white-background" data-src="img/profile-art.png"
-              data-sub-html="Caption">
+              data-sub-html="Realistic panda drawing that hides in my site somewhere... (can you find him?)">
               <img src="img/profile-art.png" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
@@ -497,19 +497,19 @@
             </div>
           </div>
           <div class="row art-row">
-            <div class="col-4 art-image-container center" data-src="img/art/powershell.jpg" data-sub-html="Caption">
+            <div class="col-4 art-image-container center" data-src="img/art/powershell.jpg" data-sub-html="My Windows wallpaper recreation- one of my first landscape drawings.">
               <img src="img/art/powershell.jpg" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
               </div>
             </div>
-            <div class="col-4 art-image-container center" data-src="img/art/15_new.png" data-sub-html="Caption">
+            <div class="col-4 art-image-container center" data-src="img/art/15_new.png" data-sub-html="Bamboo Forest - exclusive background for my 2019 website's splash screen!">
               <img src="img/art/15_new.png" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
               </div>
             </div>
-            <div class="col-4 art-image-container center" data-src="img/art/12.png" data-sub-html="Caption">
+            <div class="col-4 art-image-container center" data-src="img/art/12.png" data-sub-html="Bob Ross, the legendary painter. My second portrait drawing in a two-part study.">
               <img src="img/art/12.png" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
@@ -517,19 +517,19 @@
             </div>
           </div>
           <div class="row art-row">
-            <div class="col-4 art-image-container center" data-src="img/art/03-upscaled.png" data-sub-html="Caption">
+            <div class="col-4 art-image-container center" data-src="img/art/03-upscaled.png" data-sub-html="My logo, the Pixel Panda.">
               <img src="img/art/03-upscaled.png" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
               </div>
             </div>
-            <div class="col-4 art-image-container center" data-src="img/art/01-smaller.png" data-sub-html="Caption">
+            <div class="col-4 art-image-container center" data-src="img/art/01-smaller.png" data-sub-html="The first drawing I made after graduating high school.">
               <img src="img/art/01-smaller.png" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
               </div>
             </div>
-            <div class="col-4 art-image-container center" data-src="img/art/4.png" data-sub-html="Caption">
+            <div class="col-4 art-image-container center" data-src="img/art/4.png" data-sub-html="Pixel art I created for an unreleased game, Tao of Light.">
               <img src="img/art/4.png" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
@@ -537,19 +537,19 @@
             </div>
           </div>
           <div class="row art-row">
-            <div class="col-4 art-image-container center" data-src="img/about.svg" data-sub-html="Caption">
+            <div class="col-4 art-image-container center" data-src="img/about.svg" data-sub-html="Vector art for the background of the About section of the 2019 website.">
               <img src="img/about.svg" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
               </div>
             </div>
-            <div class="col-4 art-image-container center" data-src="img/art/drawabox.jpg" data-sub-html="Caption">
+            <div class="col-4 art-image-container center" data-src="img/art/drawabox.jpg" data-sub-html="I'm currently working on the Drawabox lesson sets. This is a sample from my Lesson 1 submission.">
               <img src="img/art/drawabox.jpg" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
               </div>
             </div>
-            <div class="col-4 art-image-container center" data-src="img/design.png" data-sub-html="Caption">
+            <div class="col-4 art-image-container center" data-src="img/design.png" data-sub-html="Vector art representation of my Linux desktop.">
               <img src="img/design.png" class="art-img">
               <div class="art-hover center">
                 <i class="fas fa-search white-text fa-2x"></i>
