About page content

--- a/index.html
+++ b/index.html
@@ -1000,6 +1000,21 @@
   <div id="about-modal-container">
     <div class="code-modal about-modal center">
       <div class="modal-title">About Me</div>
+      <p class="about-text">
+        Hi there! I'm Ben, a student at UC Berkeley pursuing Computer Science and Psychology.
+      </p>
+      <p class="about-text">
+        Currently, I am focusing on web development and am proficient in HTML, CSS, JavaScript, TypeScript, JQuery, and Angular.
+        I am about to begin a project where I hope to familiarize myself with React. I also enjoy game development and digital art.
+      </p>
+      <p class="about-text">
+        I'm also frequently involved in local hackathons and coding events- I've been to 8, created award-winning projects at 4,
+        and have organized one of my own. In my adventures, I've also cofounded Bananium Labs, a nonprofit that
+        provides support to help fellow aspiring student developers get started with their own projects.
+      </p>
+      <p class="about-text">
+        Every summer, I do a complete website redesign! This is my second website (you can view last year's if your curious <a href="https://bencuan.me/2018">over here</a>).
+      </p>
     </div>
   </div>
 
