Optimize images/videos

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="apple-touch-icon" href="favicon.ico">
   <!-- Place favicon.ico in the root directory -->
 
+  <script src="https://kit.fontawesome.com/585da7c89d.js"></script>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/boilerplate.css">
   <link rel="stylesheet" href="css/simple-grid.min.css">
@@ -36,9 +37,10 @@
   <div id="white-overlay"></div>
 
   <div class="splash-video-container">
-    <video id="splash-video" autoplay muted>
+    <!-- <video id="splash-video" autoplay muted>
       <source src="img/splashVideo.mp4" type="video/mp4">
-    </video>
+    </video> -->
+    <!-- <img id="splash-video"> -->
   </div>
 
   <div id="landing">
@@ -440,9 +442,10 @@
 
       <div class="content-square-splash">
         <div id="design-video-container">
-          <video id="design-video" loop muted>
+          <!-- <video id="design-video" loop muted>
             <source src="img/design.mp4" type="video/mp4">
-          </video>
+          </video> -->
+          <img id="design-video">
         </div>
       </div>
 
@@ -1037,7 +1040,6 @@
 
 <footer>
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
-  <script src="https://kit.fontawesome.com/585da7c89d.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
