Fix mobile styles

--- a/mobile.html
+++ b/mobile.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="css/boilerplate.css">
   <link rel="stylesheet" href="css/simple-grid.min.css">
   <link rel="stylesheet" href="css/animations.css">
+  <link rel="stylesheet" href="css/fontello-6a665a27/css/fontello.css">
   <link rel="stylesheet" href="css/mobile.css">
   <link type="text/css" rel="stylesheet" href="js/vendor/lightGallery-1.6.12/css/lightgallery.min.css" />
 
@@ -41,8 +42,8 @@
   <div id="white-overlay"></div>
 
   <div class="splash-video-container">
-    <video id="splash-video" autoplay muted>
-    </video>
+    <!-- <video id="splash-video" autoplay muted>
+    </video> -->
   </div>
 
   <div id="landing">
@@ -79,28 +80,28 @@
 
         <div class="row center no-select button-row">
           <button id="github-button" class="expand-button">
-            <i class="fab fa-github fa-2x"></i>
+            <i class="icon-github-circled"></i>
             <span class="expand-button-content hidden">
               GitHub
             </span>
           </button>
 
           <button id="linkedin-button" class="expand-button">
-            <i class="fab fa-linkedin fa-2x"></i>
+            <i class="icon-linkedin"></i>
             <span class="expand-button-content hidden">
               LinkedIn
             </span>
           </button>
 
           <button id="email-button" class="expand-button">
-            <i class="fas fa-envelope fa-2x"></i>
+            <i class="icon-mail-alt"></i>
             <span class="expand-button-content hidden">
               Email
             </span>
           </button>
 
           <button id="resume-button" class="expand-button">
-            <i class="fas fa-file-alt fa-2x"></i>
+            <i class="icon-file-pdf"></i>
             <span class="expand-button-content hidden">
               Resume
             </span>
@@ -443,8 +444,9 @@
 
       <div class="content-square-splash">
         <div id="design-video-container">
-          <video id="design-video" loop muted>
-          </video>
+          <!-- <video id="design-video" loop muted>
+          </video> -->
+          <img id="design-video">
         </div>
       </div>
 
@@ -462,21 +464,21 @@
               data-sub-html="My customized Linux desktop, designed from scratch starting from a blank terminal. View my dotfiles: https://github.com/64bitpandas/dotfiles/tree/manjaro-summer">
               <img src="img/art/arch-1.png" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
             <div class="col-4 art-image-container center" data-src="img/art/11.png"
               data-sub-html="Mahatma Gandhi, father of India, destroyer of worlds. My first portrait drawing in a two-part study.">
               <img src="img/art/11.png" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
             <div class="col-4 art-image-container center" data-src="img/art/16.jpg"
               data-sub-html="'Sunset on Europa,' my submission to the MrSuicideSheep Art Challenge 2019.">
               <img src="img/art/16.jpg" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
           </div>
@@ -485,21 +487,21 @@
               data-sub-html="These LaunchHacks stickers showcase my custom-designed logo for the hackathon.">
               <img src="img/art/stickers.jpg" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
             <div class="col-4 art-image-container center" data-src="img/art/06.png"
               data-sub-html="Custom wallpaper and color scheme drawn for my Linux desktop.">
               <img src="img/art/06.png" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
             <div class="col-4 art-image-container center white-background" data-src="img/profile-art.png"
               data-sub-html="Realistic panda drawing that hides in my site somewhere... (can you find him?)">
               <img src="img/profile-art.png" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
           </div>
@@ -508,21 +510,21 @@
               data-sub-html="My Windows wallpaper recreation- one of my first landscape drawings.">
               <img src="img/art/powershell.jpg" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
             <div class="col-4 art-image-container center" data-src="img/art/15_new.png"
               data-sub-html="Bamboo Forest - exclusive background for my 2019 website's splash screen!">
               <img src="img/art/15_new.png" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
             <div class="col-4 art-image-container center" data-src="img/art/12.png"
               data-sub-html="Bob Ross, the legendary painter. My second portrait drawing in a two-part study.">
               <img src="img/art/12.png" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
           </div>
@@ -531,21 +533,21 @@
               data-sub-html="My logo, the Pixel Panda.">
               <img src="img/art/03-upscaled.png" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
             <div class="col-4 art-image-container center" data-src="img/art/01-smaller.png"
               data-sub-html="The first drawing I made after graduating high school.">
               <img src="img/art/01-smaller.png" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
             <div class="col-4 art-image-container center" data-src="img/art/4.png"
               data-sub-html="Pixel art I created for an unreleased game, Tao of Light.">
               <img src="img/art/4.png" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
           </div>
@@ -554,21 +556,21 @@
               data-sub-html="Vector art for the background of the About section of the 2019 website.">
               <img src="img/about.svg" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
             <div class="col-4 art-image-container center" data-src="img/art/drawabox.jpg"
               data-sub-html="I'm currently working on the Drawabox lesson sets. This is a sample from my Lesson 1 submission.">
               <img src="img/art/drawabox.jpg" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
             <div class="col-4 art-image-container center" data-src="img/design.png"
               data-sub-html="Vector art representation of my Linux desktop.">
               <img src="img/design.png" class="art-img">
               <div class="art-hover center">
-                <i class="fas fa-search white-text fa-2x"></i>
+                <i class="icon-search white-text"></i>
               </div>
             </div>
           </div>
@@ -586,7 +588,7 @@
 
       <div class="code-modal websites-section center" id="img-bananium-modal">
         <div class="close-modal-button">
-          <i class="fas fa-times"></i>
+          <i class="icon-cancel"></i>
         </div>
         <div class="modal-title">Bananium Labs</div>
         <div class="row">
@@ -615,7 +617,7 @@
 
       <div class="code-modal websites-section center" id="img-launchhacks-modal">
         <div class="close-modal-button">
-          <i class="fas fa-times"></i>
+          <i class="icon-cancel"></i>
         </div>
         <div class="modal-title">LaunchHacks</div>
         <div class="row">
@@ -644,7 +646,7 @@
 
       <div class="code-modal websites-section center" id="img-2tbs-modal">
         <div class="close-modal-button">
-          <i class="fas fa-times"></i>
+          <i class="icon-cancel"></i>
         </div>
         <div class="modal-title">Two Terabyte Studios</div>
         <div class="row">
@@ -673,7 +675,7 @@
 
       <div class="code-modal games-section center" id="img-irtp-modal">
         <div class="close-modal-button">
-          <i class="fas fa-times"></i>
+          <i class="icon-cancel"></i>
         </div>
         <div class="modal-title">It's Rude To Point</div>
         <div class="row">
@@ -710,7 +712,7 @@
 
       <div class="code-modal games-section center" id="img-bullet-modal">
         <div class="close-modal-button">
-          <i class="fas fa-times"></i>
+          <i class="icon-cancel"></i>
         </div>
         <div class="modal-title">Bullet Heaven</div>
         <div class="row">
@@ -743,7 +745,7 @@
 
       <div class="code-modal games-section center" id="img-atomblast-modal">
         <div class="close-modal-button">
-          <i class="fas fa-times"></i>
+          <i class="icon-cancel"></i>
         </div>
         <div class="modal-title">AtomBlast</div>
         <div class="row">
@@ -777,7 +779,7 @@
 
       <div class="code-modal hackathons-section center" id="img-carrotcane-modal">
         <div class="close-modal-button">
-          <i class="fas fa-times"></i>
+          <i class="icon-cancel"></i>
         </div>
         <div class="modal-title">CarrotCane</div>
         <div class="row">
@@ -813,7 +815,7 @@
 
       <div class="code-modal hackathons-section center" id="img-audisea-modal">
         <div class="close-modal-button">
-          <i class="fas fa-times"></i>
+          <i class="icon-cancel"></i>
         </div>
         <div class="modal-title">AudiSea</div>
         <div class="row">
@@ -847,7 +849,7 @@
 
       <div class="code-modal hackathons-section center" id="img-aegis-modal">
         <div class="close-modal-button">
-          <i class="fas fa-times"></i>
+          <i class="icon-cancel"></i>
         </div>
         <div class="modal-title">AegisVR</div>
         <div class="row">
@@ -883,7 +885,7 @@
 
       <div class="code-modal hackathons-section center" id="img-hotswap-modal">
         <div class="close-modal-button">
-          <i class="fas fa-times"></i>
+          <i class="icon-cancel"></i>
         </div>
         <div class="modal-title">HotSwap</div>
         <div class="row">
@@ -917,7 +919,7 @@
 
       <div class="code-modal hackathons-section center" id="img-honeydue-modal">
         <div class="close-modal-button">
-          <i class="fas fa-times"></i>
+          <i class="icon-cancel"></i>
         </div>
         <div class="modal-title">HoneyDue</div>
         <div class="row">
@@ -949,7 +951,7 @@
 
       <div class="code-modal hackathons-section center" id="img-aspicio-modal">
         <div class="close-modal-button">
-          <i class="fas fa-times"></i>
+          <i class="icon-cancel"></i>
         </div>
         <div class="modal-title">Aspicio</div>
         <div class="row">
@@ -991,7 +993,7 @@
 
     <div id="back-button-container">
       <button id="back-button" class="expand-button">
-        <i class="fas fa-arrow-left fa-2x"></i>
+        <i class="icon-left-big"></i>
         <span class="expand-button-content hidden">
           Back
         </span>
@@ -1026,7 +1028,7 @@
 
   <div id="close-button-container">
     <button id="close-button" class="expand-button">
-      <i class="fas fa-times fa-2x"></i>
+      <i class="icon-cancel"></i>
       <span class="expand-button-content hidden">
         Close
       </span>
@@ -1043,7 +1045,7 @@
 
 <footer>
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
-  <script src="https://kit.fontawesome.com/585da7c89d.js"></script>
+  <!-- <script src="https://kit.fontawesome.com/585da7c89d.js"></script> -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
