Add text gradient animation

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
   <!-- Add your site or application content here -->
   <div id="landing">
     <div class="splash-gradient">
+      <div class="splash-box">
+        <div class="splash-hi">Hi! I'm</div>
+        <div class="splash-name">Ben Cuan.</div>
+        <div class="splash-desc">I'm a software developer and game designer.</div>
+        <div class="splash-button-container row">
+          <div class="col-1"></div>
+          <div class="col-2"></div>
+        </div>
+      </div>
     </div>
   </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
