Start navbar, refactor js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,33 @@
 </head>
 
 <body>
+  <nav>
+    <div class="nav-fill"></div>
+    <div class="nav-background">
+      <div class="row">
+        <div class="col-1">
+          <a href="#"><img src="img/icon.png"></a>
+        </div>
+        <div class="col-2">
+          <a href="#about" id="nav-about"><i class="fas fa-info-circle"></i> About</a>
+        </div>
+        <div class="col-2">
+          <a href="#experience" id="nav-exp"><i class="fas fa-info-circle"></i> Experience</a>
+        </div>
+        <div class="col-2">
+          <a href="#projects" id="nav-proj"><i class="fas fa-info-circle"></i> Projects</a>
+        </div>
+        <div class="col-2">
+          <a href="#contact" id="nav-contact"><i class="fas fa-info-circle"></i> Contact</a>
+        </div>
+        <div class="col-3">
+          <a href="/resume" id="nav-resume"><i class="fas fa-info-circle"></i> Resume</a>
+        </div>
+      </div>
+    </div>
+  </nav>
 
+  <!-- START LANDING -->
   <div id="landing">
     <div class="splash-gradient">
       <div class="splash-box">
@@ -40,7 +66,8 @@
             </div>
           </div>
           <div class="col-2 splash-button-col">
-            <div class="landing-btn linkedin" id="linkedin-btn" onclick="openInNewTab('https://linkedin.com/in/bencuan')">
+            <div class="landing-btn linkedin" id="linkedin-btn"
+              onclick="openInNewTab('https://linkedin.com/in/bencuan')">
               <i class="fab fa-linkedin-in"></i>
             </div>
           </div>
@@ -98,6 +125,13 @@
         </div>
       </div>
     </div>
+  </div>
+  <!-- END LANDING -->
+
+
+  <!-- START CONTENT -->
+  <div id="content">
+    <!-- START ABOUT -->
   </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="https://kit.fontawesome.com/585da7c89d.js" crossorigin="anonymous"></script>
