Navbar hover animations

--- a/index.html
+++ b/index.html
@@ -26,27 +26,31 @@
 
 <body>
   <nav>
-    <div class="nav-fill"></div>
-    <div class="nav-background">
-      <div class="row">
-        <div class="col-1">
-          <a href="#"><img src="img/icon.png"></a>
-        </div>
-        <div class="col-2">
-          <a href="#about" id="nav-about"><i class="fas fa-info-circle"></i> About</a>
-        </div>
-        <div class="col-2">
-          <a href="#experience" id="nav-exp"><i class="fas fa-info-circle"></i> Experience</a>
-        </div>
-        <div class="col-2">
-          <a href="#projects" id="nav-proj"><i class="fas fa-info-circle"></i> Projects</a>
-        </div>
-        <div class="col-2">
-          <a href="#contact" id="nav-contact"><i class="fas fa-info-circle"></i> Contact</a>
-        </div>
-        <div class="col-3">
-          <a href="/resume" id="nav-resume"><i class="fas fa-info-circle"></i> Resume</a>
-        </div>
+    <div class="nav-background"></div>
+    <div id="nav-fill-home" class="nav-fill logo-color"></div>
+    <div id="nav-fill-about" class="nav-fill itch"></div>
+    <div id="nav-fill-exp" class="nav-fill email"></div>
+    <div id="nav-fill-proj" class="nav-fill linkedin"></div>
+    <div id="nav-fill-contact" class="nav-fill github"></div>
+    <div id="nav-fill-resume" class="nav-fill resume"></div>
+    <div class="row">
+      <div class="col-1">
+        <a href="#" id="nav-home"><img src="img/icon.png"></a>
+      </div>
+      <div class="col-2">
+        <a href="#about" id="nav-about"><i class="fas fa-info-circle"></i> About</a>
+      </div>
+      <div class="col-2">
+        <a href="#experience" id="nav-exp"><i class="fas fa-info-circle"></i> Experience</a>
+      </div>
+      <div class="col-2">
+        <a href="#projects" id="nav-proj"><i class="fas fa-info-circle"></i> Projects</a>
+      </div>
+      <div class="col-2">
+        <a href="#contact" id="nav-contact"><i class="fas fa-info-circle"></i> Contact</a>
+      </div>
+      <div class="col-3">
+        <a href="/resume" id="nav-resume"><i class="fas fa-info-circle"></i> Resume</a>
       </div>
     </div>
   </nav>
