Content boxes and headers

--- a/index.html
+++ b/index.html
@@ -136,6 +136,19 @@
   <!-- START CONTENT -->
   <div id="content">
     <!-- START ABOUT -->
+    <div id="about" class="container content-section">
+      <div class="section-head left-head">About Me</div>
+      <div class="content-box">
+        <div class="content">
+          Awesome content<br><br>
+          Awesome content<br><br>
+          Awesome content<br><br>
+          Awesome content<br><br>
+          Awesome content<br><br>
+          Awesome content<br><br>
+        </div>
+      </div>
+    </div>
   </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="https://kit.fontawesome.com/585da7c89d.js" crossorigin="anonymous"></script>
