Featured projects layout

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
           </div>
           <div class="col-2 splash-button-col">
-            <div class="landing-btn itch" id="itch-btn" onclick="openInNewTab('https://itch.io/profile/64bitpandas')">
+            <div class="landing-btn itch" id="itch-btn" onclick="openInNewTab('https://64bitpandas.itch.io')">
               <i class="fab fa-itch-io"></i>
             </div>
           </div>
@@ -194,7 +194,50 @@
         <img class="about-img" src="img/icon.png"></img>
       </div>
     </div>
+    <!-- END ABOUT -->
+
+    <!-- START PROJECTS -->
+    <div id="projects" class="container content-section">
+      <div class="section-head right-head">Featured Projects</div>
+
+      <div class="content-box feature-box" id="proj-launchhacks">
+        <div class="content content-text feature-content">
+
+          <div class="row">
+            <div class="col-9">
+              <div class="feature-label github">
+                LaunchHacks
+                <div class="feature-tag itch">
+                  Event
+                </div>
+              </div>
+            </div>
+            <div class="col-3 feature-link-container">
+              <span class="feature-link" onclick="openInNewTab('https://github.com/64bitpandas')">
+                <i class="fab fa-github"></i>
+              </span>
+              <span class="feature-link" onclick="openInNewTab('https://github.com/64bitpandas')">
+                <i class="fas fa-external-link-square-alt"></i>
+              </span>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-6">
+              In 2019, I organized a 24 hour long hackathon for 100 high school students. Insert more content here!
+            </div>
+            <div class="col-6 feature-img-container">
+              <img src="img/launchhacks.jpg" class="feature-img">
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+    <!-- END PROJECTS -->
   </div>
+  <!-- END CONTENT -->
   </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="https://kit.fontawesome.com/585da7c89d.js" crossorigin="anonymous"></script>
