More projects button layout

--- a/index.html
+++ b/index.html
@@ -234,6 +234,18 @@
         </div>
       </div>
 
+
+      <!-- MORE PROJECTS SECTION -->
+      <div class="section-head center-head">More Projects</div>
+
+      <div class="row center proj-buttons">
+          <div class="btn-proj btn-proj-selected" id="proj-all"><div class="content">All</div></div>
+          <span class="btn-proj" id="proj-all"><div class="content">Websites</div></span>
+          <span class="btn-proj" id="proj-all"><div class="content">Games</div></span>
+          <span class="btn-proj" id="proj-all"><div class="content">Apps</div></span>
+          <span class="btn-proj" id="proj-all"><div class="content">Other</div></span>
+      </div>
+
     </div>
     <!-- END PROJECTS -->
   </div>
