Clickable project butons

--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
 
       <div class="row center proj-buttons">
           <div class="btn-proj btn-proj-selected" id="proj-all"><div class="content">All</div></div>
-          <span class="btn-proj" id="proj-all"><div class="content">Websites</div></span>
-          <span class="btn-proj" id="proj-all"><div class="content">Games</div></span>
-          <span class="btn-proj" id="proj-all"><div class="content">Apps</div></span>
-          <span class="btn-proj" id="proj-all"><div class="content">Other</div></span>
+          <span class="btn-proj" id="proj-web"><div class="content">Websites</div></span>
+          <span class="btn-proj" id="proj-game"><div class="content">Games</div></span>
+          <span class="btn-proj" id="proj-app"><div class="content">Apps</div></span>
+          <span class="btn-proj" id="proj-other"><div class="content">Other</div></span>
       </div>
 
     </div>
